# ptrpack

./: Cargo.toml  README.md
pack_macros/: Cargo.toml  diff.actual  diff.expected
pack_macros/src/: lib.rs  packable.rs  packable2.rs  test.rs
ptrpack_macros/: Cargo.toml
ptrpack_macros/src/: lib.rs  packable.rs  test.rs
src/: .#lib.rs  aligned.rs  bitstart.rs  detail.rs  either.rs  lib.rs  packable.rs  ptrpack.rs  tinyenum.rs  tuples.py  tuples.rs
src/impls/: alloc.rs  core.rs  mod.rs  tinyuint.rs
tests/: either.rs
